2002-09-27  Dick Porter  <dick@ximian.com>

	* interp.c: Tell glib what the program name is, by passing it the
	name of the managed file we're executing

2002-08-28  Dick Porter  <dick@ximian.com>

	* interp.c: mono_set_rootdir() doesnt take any args now

	* Makefile.am: Export HOST_CC and turn on optimisation for w32 builds

2002-08-28  Nick Drochak  <ndrochak@gol.com>

	* interp.c: check and throw exception if needed for overflow on 
	multiplication of integer types.

2002-08-07  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c (interp_walk_stack): removed the createdelegate icall

2002-08-02  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c (get_virtual_method): support proxies
	(ves_exec_method): impl. LDFLD/STFLD for proxies.

Fri Aug 2 13:00:41 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* interp.c, interp.h: implemented exception trap for runtime_invoke
	and handle exceptions across managed/unmanaged boundaries.

2002-08-01  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c (stackval_from_data): add pinvoke argument
	(stackval_to_data): add pinvoke argument. We need consider the
	fact that unmanages structures may have different sizes.
	(ves_pinvoke_method): do not call stackval_from_data if the result
	is a value type.

Wed Jul 31 17:47:11 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* interp.c: simplified some more branch code.

Wed Jul 31 16:50:42 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* interp.c: fixed indentation, simplified some code.

Wed Jul 31 14:29:43 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* interp.c: fix so that mint can at least get to executing Main().

2002-07-31  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c: use the new marshaling code. better delegate/remoting 
	support.
	(ves_exec_method): bug fix - directly jump to handle_exception.

2002-07-29  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c (main): install compile_method handler

Wed Jul 24 13:02:12 CEST 2002 Paolo Molaro <lupus@ximian.com>
